--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="menu">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="#">Currículo</a></li>
+                <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Projetos</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
@@ -28,30 +28,32 @@
             <h4 class="name-titulo">Um pouco sobre mim </h4>
             <p class="name-paragrafo">um pouco sobre mim</p>
             <div class="butoes">
-                <a href=""><button class="bnt-contato"> Entre em contato</button></a>
+                <a href="#fale-comigo"><button class="bnt"> Entre em contato</button></a>
             </div>
         </div>
       </div>
 
       <div class="projetos"> 
         <h2 class="meus-projetos">Meus <sapn>Projetos.</sapn></h2>
-        <div class="projetos-box">
-            <h3>Qrcode</h3>
-            <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p>
-        </div>
-        <div class="projetos-box">
-            <h3>Calculadora fisica</h3>
-            <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p>
-        </div>
-        <div class="projetos-box">
-            <h3>Gerador de finanças</h3>
-            <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p>
+        <div class="box">
+            <div class="projetos-box">
+                <h3>Qrcode</h3>
+                <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p>
+            </div>
+            <div class="projetos-box">
+                <h3>Calculadora fisica</h3>
+                <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p>
+            </div>
+            <div class="projetos-box">
+                <h3>Gerador de finanças</h3>
+                <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p>
+            </div>
         </div>
       </div>
 
-      <div class="contato ">
+      <div class="contato" id="fale-comigo">
         <div> 
-            <h1><span>Contato</span></h1>
+            <h1><span>Fale Comigo</span></h1>
     </div>
     <form action="https://formsubmit.co/capic.2023118tads0008@aluno.ifpi.edu.br"
           method="post" 
@@ -64,7 +66,7 @@
           <input type="text" name="assunto" id="assunto">
           <label for="msm">Mensagem</label>
           <textarea name="msm" required id="msm"></textarea>
-          <button type="submit" id="bnt-enviar">Enviar</button>
+          <button type="submit" id="bnt-enviar" class="bnt">Enviar</button>
     
         </form>
       </div>
