--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="https://www.linkedin.com/in/emileny-r-255b56202?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="imgs/linkedin.png" alt="link para a rede social likendin"/></a>
                         <a href="https://www.instagram.com/emilenyleal?igsh=amcyMWhzODNzYzQy"><img src="imgs/instagram.png" alt="link para a rede social Instragram"/></a>
                         <a href="https://github.com/EmilenyRochaLeal"><img src="imgs/github.png" alt="link do github para visualização de códigos"></a>
-                        <a href="mailto:emilenyleal20@gmail.com? subject=subject text"><img src="imgs/gmail.png" alt=""></a>
+                        <a href="mailto:emilenyleal20@gmail.com? subject=subject text"><img src="imgs/gmail.png" alt="link para enviar um email"></a>
                     </div>
             </div>
       </div>
@@ -42,31 +42,31 @@
         <h2 class="meus-projetos">Minhas Habilidades</h2>
         <div class="conteiner-icon">
             <div class="box-icon">
-                <img src="imgs/html-5.png">
+                <img src="imgs/html-5.png" alt="Representação html (liguagem de marcação de hipertexto)">
                 <p>Html</p>
             </div>
             <div class="box-icon">
-                <img src="imgs/css-3 (1).png">
+                <img src="imgs/css-3 (1).png" alt="Representação css ()">
                 <p>Css</p>
             </div>
             <div class="box-icon">
-                <img src="imgs/js.png">
+                <img src="imgs/js.png" alt="imagem da linguagem javaScript">
                 <p>JavaScript</p>
             </div>
             <div class="box-icon">
-                <img src="imgs/pitao.png">
+                <img src="imgs/pitao.png" alt="imagem da liguagem python">
                 <p>Python</p>
             </div>
             <div class="box-icon">
-                <img src="imgs/java.png"> 
+                <img src="imgs/java.png" alt="imagem da linhuagem java "> 
                 <p>Java</p>
             </div>
             <div class="box-icon">
-                <img src="imgs/postgre.png">
+                <img src="imgs/postgre.png" alt="Representação do banco de dados postgres">
                 <p>Postgres</p>
             </div>
             <div class="box-icon">
-                <img src="imgs/giticon.png">
+                <img src="imgs/giticon.png" alt="logo do git">
                 <p>Git</p>
             </div>
         </div>
