--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header class="conteiner">
-        <div class="logo">Emileny Leal<span class="est-front">Estudante Front-end</span></div>
-        <div class="menu">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="#minhas-habilidades">Habilidades</a></li>
-                <li><a href="#meus-projetos">Projetos</a></li>
-                <li><a href="#fale-comigo">Contato</a></li>
-            </ul>
-        </div>
+        <div class="logo"><h2 class="h2-logo">Emileny Leal</h2><span class="est-front">Estudante Front-end</span></div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="#minhas-habilidades">Habilidades</a></li>
+                    <li><a href="#meus-projetos">Projetos</a></li>
+                    <li><a href="#fale-comigo">Contato</a></li>
+                </ul>
+            </nav>
     </header>
     <main class="conteiner"> 
         <div class="principal">
@@ -25,8 +25,8 @@
             </div>
             <div class="lateral-imagem"> 
                 <h2 class="name-ola">Olá!</h2>
-                <h3 class="name-titulo">Um pouco sobre mim </h3>
-                <p class="name-paragrafo"> Sou aluna do curso Anásile e Desemvolvimento de Sistemas. <br>Gosto de pensar que com compromisso, organização e calma posso cumprir os meus objetivos.<br> Por isso me considero uma constante aprendiz.
+                <h3 class="name-titulo">Meu nome é Emileny</h3>
+                <p class="name-paragrafo"> Sou aluna do curso Anásile e Desenvolvimento de Sistemas. <br>Gosto de pensar que com compromisso, organização e calma posso cumprir os meus objetivos.<br> Por isso me considero uma constante aprendiz.
                     Tenho como propósito seguir e prosseguir conhecendo, por meio da prática, novas tecnologias para meu desenvolvimento profissional e pessoal.</p>
                 
                     <div class="entre-contato">
@@ -76,20 +76,19 @@
         <h2 class="meus-projetos">Meus <sapn>Projetos.</sapn></h2>
         <div class="box">
             <div class="projetos-box">
-                <!-- <img src="imgs/meu-qrcode.png"> -->
                 <h3>Qrcode</h3>
                 <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p><br>
-                <a href="https://emilenyrochaleal.github.io/GeradorDeQRcode/"><button class="bnt">Visite web</button></a>
+                <a href="https://emilenyrochaleal.github.io/GeradorDeQRcode/">Visualizar projeto</a>
             </div>
             <div class="projetos-box">
                 <h3>Calculadora de Campo Elétrico</h3>
                 <p>Página que calcula o campo elétrico gerado por duas partículas</p><br>
-                <a href="https://174c7573-1103-4317-ad34-6e2d0671ee40-00-7opcwyb6qdo0.kirk.replit.dev/"><button class="bnt">Visite Web</button></a>
+                <a href="https://174c7573-1103-4317-ad34-6e2d0671ee40-00-7opcwyb6qdo0.kirk.replit.dev/">Visualizar projeto</a>
             </div>
             <div class="projetos-box">
-                <h3>Gerador de finanças</h3>
+                <h3>Finanças fácil</h3>
                 <p>Financia Fácil é uma página para gerenciar ganhos e gastos</p><br>
-                <a href="https://kednaleal.github.io/projeto-geradordefinancas-financiafacil/principal.html"><button class="bnt">Visite web</button></a>
+                <a href="https://kednaleal.github.io/projeto-geradordefinancas-financiafacil/principal.html">Visualizar projeto</a>
             </div>
         </div>
       </div>
