--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="conteiner"> 
         <div class="principal">
             <div class="imagem">
-                <img src="imgs/person.jpg" alt="foto da Emileny" loading="lazy" />
+                <img src="imgs/person.jpg" alt="foto da Emileny"/>
             </div>
             <div class="lateral-imagem"> 
                 <h2 class="name-ola">Olá!</h2>
@@ -52,10 +52,10 @@
                     Tenho como propósito seguir e prosseguir conhecendo, por meio da prática, novas tecnologias para meu desenvolvimento profissional e pessoal.</p>
                 
                     <div class="entre-contato">
-                        <a href="https://www.linkedin.com/in/emileny-r-255b56202?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="imgs/linkedin.png" alt="link para a rede social likendin"/></a>
-                        <a href="https://www.instagram.com/emilenyleal?igsh=amcyMWhzODNzYzQy"><img src="imgs/instagram.png" alt="link para a rede social Instragram"/></a>
-                        <a href="https://github.com/EmilenyRochaLeal"><img src="imgs/github.png" alt="link do github para visualização de códigos"></a>
-                        <a href="mailto:emilenyleal20@gmail.com? subject=subject text"><img src="imgs/gmail.png" alt="link para enviar um email"></a>
+                        <a href="https://www.linkedin.com/in/emileny-r-255b56202?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="imgs/linkedin.png" alt="link para a rede social likendin"/></a>
+                        <a href="https://www.instagram.com/emilenyleal?igsh=amcyMWhzODNzYzQy" target="_blank"><img src="imgs/instagram.png" alt="link para a rede social Instragram"/></a>
+                        <a href="https://github.com/EmilenyRochaLeal" target="_blank"><img src="imgs/github.png" alt="link do github para visualização de códigos"></a>
+                        <a href="mailto:emilenyleal20@gmail.com? subject=subject text" target="_blank"><img src="imgs/gmail.png" alt="link para enviar um email"></a>
                     </div>
             </div>
         </div>
@@ -100,17 +100,17 @@
               <div class="projetos-box">
                   <h3>Qrcode</h3>
                   <p>Página que gera qrcode a partir de uma URL (Uniform Resource Locator).</p><br>
-                <a href="https://emilenyrochaleal.github.io/GeradorDeQRcode/">Visualizar projeto</a>
+                <a href="https://emilenyrochaleal.github.io/GeradorDeQRcode/" target="_blank">Visualizar projeto</a>
             </div>
             <div class="projetos-box">
                 <h3>Calculadora de Campo Elétrico</h3>
                 <p>Página que calcula o campo elétrico gerado por duas partículas</p><br>
-                <a href="https://174c7573-1103-4317-ad34-6e2d0671ee40-00-7opcwyb6qdo0.kirk.replit.dev/">Visualizar projeto</a>
+                <a href="https://lealkedna.github.io/CalculadoraDeCampoEletrico/" target="_blank">Visualizar projeto</a>
             </div>
             <div class="projetos-box">
                 <h3>Finanças fácil</h3>
                 <p>Financia Fácil é uma página para gerenciar ganhos e gastos</p><br>
-                <a href="https://kednaleal.github.io/projeto-geradordefinancas-financiafacil/principal.html">Visualizar projeto</a>
+                <a href="https://kednaleal.github.io/projeto-geradordefinancas-financiafacil/principal.html" target="_blank">Visualizar projeto</a>
             </div>
         </div>
       </div>
@@ -150,9 +150,9 @@
         <div class="rede-social">
             <h3>Me siga</h3>
             <div>
-                <a href="https://www.linkedin.com/in/emileny-r-255b56202?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="imgs/linkedin.png" alt="link para a rede social likendin"/></a>
-                <a href="https://www.instagram.com/emilenyleal?igsh=amcyMWhzODNzYzQy"><img src="imgs/instagram.png" alt="link para a rede social Instragram"/></a>
-                <a href="https://github.com/EmilenyRochaLeal"><img src="imgs/github.png" alt="link do github para visualização de códigos"></a>
+                <a href="https://www.linkedin.com/in/emileny-r-255b56202?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><img src="imgs/linkedin.png" alt="link para a rede social likendin"/></a>
+                <a href="https://www.instagram.com/emilenyleal?igsh=amcyMWhzODNzYzQy" target="_blank"><img src="imgs/instagram.png" alt="link para a rede social Instragram"/></a>
+                <a href="https://github.com/EmilenyRochaLeal" target="_blank"><img src="imgs/github.png" alt="link do github para visualização de códigos"></a>
             </div>
         </div>
         <div class="autora">
