"feat: novo projeto"

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <a href="https://lealkedna.github.io/CalculadoraDeCampoEletrico/" target="_blank">Visualizar projeto</a>
             </div>
             <div class="projetos-box">
-                <h3>Finanças fácil</h3>
-                <p>Financia Fácil é uma página para gerenciar ganhos e gastos</p><br>
-                <a href="https://kednaleal.github.io/projeto-geradordefinancas-financiafacil/principal.html" target="_blank">Visualizar projeto</a>
+                <h3>Gerenciar Tarefas</h3>
+                <p>Gerenciar Tarefas é uma página para gerenciar suas tarefas</p><br>
+                <a href="https://ifpi-picos.github.io/js-dom-api-EmilenyRochaLeal/" target="_blank">Visualizar projeto</a>
             </div>
         </div>
       </div>
